@@ -1,6 +1,6 @@
 % File src/library/utils/man/chooseBioCmirror.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 2009-2015 R Core Team
+% Copyright 2009-2017 R Core Team
 % Distributed under GPL 2 or later
 
 \name{chooseBioCmirror}
@@ -12,7 +12,6 @@
 }
 \usage{
 chooseBioCmirror(graphics = getOption("menu.graphics"), ind = NULL,
-                 useHTTPS = getOption("useHTTPS", TRUE),
                  local.only = FALSE)
 }
 \arguments{
@@ -22,9 +21,6 @@ chooseBioCmirror(graphics = getOption("menu.graphics"), ind = NULL,
     text \code{\link{menu}}.}
   
   \item{ind}{Optional numeric value giving which entry to select.}
-
-  \item{useHTTPS}{Whether to prefer HTTPS mirrors (see
-    \code{\link{chooseCRANmirror}}).}
   
   \item{local.only}{Logical, try to get most recent list from the
     Bioconductor master or use file on local disk only.}
